--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="D:/libs/jars/babbler-0.7.4.jar"/>
 	<classpathentry kind="lib" path="D:/Downloads/fontawesomefx-8.9.jar"/>
-	<classpathentry kind="lib" path="D:/libs/jars/rsyntaxtextarea-3.0.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="D:/libs/jars/jfoenix.jar"/>
+	<classpathentry kind="lib" path="D:/libs/jars/richtextfx-0.7-M5.jar"/>
+	<classpathentry kind="lib" path="D:/libs/jars/rfx dependencies/flowless-0.6-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="D:/libs/jars/rfx dependencies/reactfx-2.0-M5.jar"/>
+	<classpathentry kind="lib" path="D:/libs/jars/rfx dependencies/undofx-1.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/libs/jars/rfx dependencies/wellbehavedfx-0.3.jar"/>
 	<classpathentry kind="output" path="out/production/codechat"/>
 </classpath>
