--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="lib" path="D:/libs/jars/babbler-0.7.4.jar"/>
 	<classpathentry kind="lib" path="D:/Downloads/fontawesomefx-8.9.jar"/>
 	<classpathentry kind="lib" path="D:/libs/jars/richtextfx-0.7-M5.jar"/>
