--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,9 @@ dependencies {
     compile 'de.jensd:fontawesomefx:8.9'
     compile 'org.controlsfx:controlsfx:8.40.12'
     compile 'org.fxmisc.richtext:richtextfx:0.7-M5'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
     testCompile 'junit:junit:4.12'
-    //compile 'org.fxmisc.flowless:flowless:0.5.2'
 }
 
 jfx {
